--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]  # Run the tests on multiple Python versions
+        python-version: ["3.8"]  # Run the tests on multiple Python versions
 
     steps:
       # Checkout the code from the repository
