--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.9"]  # Run the tests on multiple Python versions
+        python-version:  [3.9]   # Run the tests on multiple Python versions
 
     steps:
       # Checkout the code from the repository
@@ -32,8 +32,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest  # Install pytest explicitly
 
-      # Run tests (use pytest, unittest, or another testing framework)
+      # Run tests
       - name: Run tests
         run: |
           pytest tests/  # Replace this with your testing folder or testing command
@@ -51,4 +52,3 @@ jobs:
         run: |
           pip install twine
           twine upload dist/*  # Uploads to PyPI
-
